Fix/dnd scrollbars (#402)
* up width and height of card-scene to hide scrollbars when content is smaller than 100%

* dynamically change height of card-container when content is greater than 400px

--- a/imports/ui/taskRenderers/DragDropView/DragDropViewNormal.scss
+++ b/imports/ui/taskRenderers/DragDropView/DragDropViewNormal.scss
@@ -9,6 +9,8 @@
 .card-scene {
   overflow-x: auto;
   overflow-y: auto;
+  height: 106%;
+  width: 102%;
 }
 
 .card-column-header {
@@ -35,7 +37,8 @@
   box-shadow: 0px 1px 2px #00000029;
   border-radius: 44px;
   opacity: 1;
-  height: 400px;
+  min-height: 400px;
+  height: auto;
   width: 368px;
   padding-left: 20px;
   margin-right: 20px;
